# no-one-lives-forever-source-port

./: README.md
LT2/lithshared/incs/: butemgr.h
LT2/sdk/inc/: iltclient.h  iltserver.h
NOLF/: CMakeCache.txt  CMakeLists.txt  NOLF.sln  UpgradeLog.htm
NOLF/ClientRes/: CMakeLists.txt  ClientRes.vcxproj
NOLF/ClientShellDLL/: CMakeLists.txt  ClientShellDLL.vcxproj  ClientShellDLL.vcxproj.filters
NOLF/ObjectDLL/: CMakeLists.txt  Object.vcxproj  Object.vcxproj.filters
